terminar diseno de index

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Parcel
+dist/
+
 # Logs
 logs
 *.log
@@ -93,7 +96,8 @@ typings/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
