--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --public-url ./",
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "author": "Ender Bonnet <enbonnet@pm.me>",
   "license": "ISC",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/react": "^8.0.8",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "react-test-renderer": "^16.8.6"
