--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Ender Bonnet <enbonnet@pm.me>",
   "license": "ISC",
   "dependencies": {
+    "@testing-library/jest-dom": "^4.0.0",
     "parcel-bundler": "^1.12.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@testing-library/dom": "^5.6.1",
     "@testing-library/react": "^8.0.8",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
