--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@testing-library/jest-dom": "^4.0.0",
+    "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "parcel-bundler": "^1.12.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
